wdl-analysis/tests/validation/placeholder-in-import/source.errors
error: failed to import `ok.wdl`: No such file or directory (os error 2)
  ┌─ tests/validation/placeholder-in-import/source.wdl:7:8
  │
7 │ import "ok.wdl" as baz
  │        ^^^^^^^^

